--- a/.github/workflows/front-end-cicd.yml
+++ b/.github/workflows/front-end-cicd.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Sync to S3
         uses: jakejarvis/s3-sync-action@master
         with:
-          args: --acl public-read --follow-symlinks --delete
+          args: --acl public-read --follow-symlinks --delete --exclude '.git*/*'
         env:
           AWS_S3_Bucket: ${{ secrets.AWS_S3_Bucket }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
