--- a/.github/workflows/front-end-cicd.yml
+++ b/.github/workflows/front-end-cicd.yml
@@ -1,4 +1,4 @@
-name: Sync S3 Bucket through CloudFront
+name: Upload website to S3
 
 on:
   push:
@@ -8,25 +8,15 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
+      - uses: actions/checkout@master
+      - name: Sync to S3
+        uses: jakejarvis/s3-sync-action@master
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: 'us-east-1'  # Specify your AWS region
-
-      - name: Sync S3 bucket through CloudFront
-        uses: aws-actions/s3-sync@v3
-        with:
-          args: --acl public-read --follow-symlinks --delete
+          args: --acl public-read --follow-symlinks --delete --exclude '.git*/*'
         env:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: 'us-east-1'
           SOURCE_DIR: 'html5up-dimension'
-
-      - name: Create CloudFront Invalidation
-        run: aws cloudfront create-invalidation --distribution-id EF52U6XTHPA78 --paths "/*"
