--- a/.github/workflows/front-end-cicd.yml
+++ b/.github/workflows/front-end-cicd.yml
@@ -22,11 +22,10 @@ jobs:
           SOURCE_DIR: 'html5up-dimension'
 
       - name: CloudFront Invalidation
-        uses: einaregilsson/cloudfront-invalidate-action@v1
+        uses: softprops/action-aws-cli@v1
         with:
-          distributionId: 'EF52U6XTHPA78'
-          paths: '/*'
+          args: cloudfront create-invalidation --distribution-id EF52U6XTHPA78 --paths "/*"
         env:
-          AWS_CLOUDFRONT_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_CLOUDFRONT_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: 'us-east-1'
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: 'us-east-1'
